# spotify-code-generator

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
examples/: sample_inputs.txt
legacy/: opencv_pattern_generator.py
spotify_code_generator/: __init__.py  cli.py  core.py
tests/: test_core.py
